#551 - GET /documents pagination stops early when a page ends at a date boundary (#552)